# kospi_futures_quant_project

./: .gitignore  GETTING_STARTED.md  LICENSE  Makefile  README.md  domestic_index_future_code.ipynb  fo_idx_code_mts.csv  migrate_structure.py  pyproject.toml  requirements.txt  setup.py
API_DOCS/: 국내옵션전광판_콜풋.md
data/domestic_futures/domestic_index_futures_minute/: 101W06.csv  106W06.csv  108W06.csv
data/domestic_futures/kospi200_futures_daily/: 101V06.csv  101V09.csv  101W03.csv  101W06.csv  101W09.csv
data/domestic_futures/kospi200_futures_daily_continuous/: 101000.csv
data/domestic_futures/kospi200_futures_investor_trends_realtime/: kospi200.csv
data/domestic_futures/vkospi_futures_daily/: 104W06.csv  104W07.csv
data/domestic_options/domestic_options_display_board/: 202506_call.csv  202506_put.csv  202507_call.csv  202507_put.csv  202508_call.csv  202508_put.csv  202509_call.csv  202509_put.csv
data/domestic_options/domestic_weekly_options_price/: 209DXW320.csv  209DXW325.csv  209DXW330.csv  209DXW335.csv  209DXW340.csv  2AF97W320.csv  2AF97W325.csv  2AF97W330.csv  2AF97W335.csv  2AF97W340.csv  309DYW320.csv  309DYW325.csv  309DYW330.csv  309DYW335.csv  309DYW340.csv
data/market_data/kosdaq_investor_trends_realtime/: kosdaq.csv
data/reference/: fo_com_code.csv  fo_idx_code_mts.csv
docs/: PROJECT_ROADMAP.md  Roadmap.md  WEEKLY_OPTIONS_MAPPING_GUIDE.md  incremental_update_guide.md
docs/daily_tasks/: README.md
notebooks/: 01_EDA_Data_Overview.ipynb  02_EDA_Time_Series_Analysis.ipynb
scripts/: init_metadata.py  run_data_collector.py
src/: __init__.py
src/backtesting/: __init__.py
src/data_collection/: __init__.py  abstract_feature.py  api_client.py  domestic_futures_minute.py  domestic_futures_price.py  domestic_options.py  domestic_options_display_board.py  domestic_options_price.py  domestic_weekly_options_price.py  feature_manager.py  investor_buy.py  investor_daily.py  run_data_collector.py
src/feature_engineering/: __init__.py  abstract_feature.py  feature_engineering_guide.py  feature_manager.py
src/modeling/: __init__.py
src/utils/: api_config_manager.py  api_optimizer.py  incremental_utils.py  metadata_manager.py  optimized_feature_wrapper.py  trading_calendar.py
sushi/: __init__.py
sushi/database/: __init__.py  db_manager.py
sushi/feature/: __init__.py  abstract_feature.py  api_client.py  feature_manager.py
sushi/utils/: __init__.py
tokens/: KIS_TOKEN_20250607.yaml
(+14 files in other folders)
